// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`moment formatting baseline Grid A — every locale × every format formats a January date in every locale (de-at override) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 يناير 2026",
    "LLL": "5 يناير 2026 15:30",
    "LT": "15:30",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير 5, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "الإثنين",
    "z": "CET",
  },
  "ar-sa": {
    "HH:mm:ss": "١٥:٣٠:٠٠",
    "L": "٠٥/٠١/٢٠٢٦",
    "LL": "٥ يناير ٢٠٢٦",
    "LLL": "٥ يناير ٢٠٢٦ ١٥:٣٠",
    "LT": "١٥:٣٠",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير ٥، ٢٠٢٦",
    "YYYY-MM-DD": "٢٠٢٦-٠١-٠٥",
    "Z": "+٠١:٠٠",
    "dddd": "الإثنين",
    "z": "CET",
  },
  "ca": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 de gener de 2026",
    "LLL": "5 de gener de 2026 a les 15:30",
    "LT": "15:30",
    "MMM": "gen.",
    "MMMM": "gener",
    "MMMM Do, YYYY": "gener 5è, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "dilluns",
    "z": "CET",
  },
  "cy": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 Ionawr 2026",
    "LLL": "5 Ionawr 2026 15:30",
    "LT": "15:30",
    "MMM": "Ion",
    "MMMM": "Ionawr",
    "MMMM Do, YYYY": "Ionawr 5ed, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Dydd Llun",
    "z": "CET",
  },
  "da": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. januar 2026",
    "LLL": "5. januar 2026 15:30",
    "LT": "15:30",
    "MMM": "jan",
    "MMMM": "januar",
    "MMMM Do, YYYY": "januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "mandag",
    "z": "CET",
  },
  "de": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. Januar 2026",
    "LLL": "5. Januar 2026 15:30",
    "LT": "15:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Montag",
    "z": "CET",
  },
  "de-at": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. Januar 2026",
    "LLL": "5. Januar 2026 15:30",
    "LT": "15:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Montag",
    "z": "CET",
  },
  "el": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 Ιανουαρίου 2026",
    "LLL": "5 Ιανουαρίου 2026 3:30 ΜΜ",
    "LT": "3:30 ΜΜ",
    "MMM": "Ιαν",
    "MMMM": "Ιανουάριος",
    "MMMM Do, YYYY": "Ιανουάριος 5η, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Δευτέρα",
    "z": "CET",
  },
  "en": {
    "HH:mm:ss": "15:30:00",
    "L": "01/05/2026",
    "LL": "January 5, 2026",
    "LLL": "January 5, 2026 3:30 PM",
    "LT": "3:30 PM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
  "en-ca": {
    "HH:mm:ss": "15:30:00",
    "L": "2026-01-05",
    "LL": "January 5, 2026",
    "LLL": "January 5, 2026 3:30 PM",
    "LT": "3:30 PM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
  "en-gb": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 January 2026",
    "LLL": "5 January 2026 15:30",
    "LT": "15:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
  "en-ie": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 January 2026",
    "LLL": "5 January 2026 15:30",
    "LT": "15:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
  "es": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 de enero de 2026",
    "LLL": "5 de enero de 2026 15:30",
    "LT": "15:30",
    "MMM": "ene.",
    "MMMM": "enero",
    "MMMM Do, YYYY": "enero 5º, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "lunes",
    "z": "CET",
  },
  "fi": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. tammikuuta 2026",
    "LLL": "5. tammikuuta 2026, klo 15.30",
    "LT": "15.30",
    "MMM": "tammi",
    "MMMM": "tammikuu",
    "MMMM Do, YYYY": "tammikuu 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "maanantai",
    "z": "CET",
  },
  "fr": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 janvier 2026",
    "LLL": "5 janvier 2026 15:30",
    "LT": "15:30",
    "MMM": "janv.",
    "MMMM": "janvier",
    "MMMM Do, YYYY": "janvier 5, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "lundi",
    "z": "CET",
  },
  "ga": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 Eanáir 2026",
    "LLL": "5 Eanáir 2026 15:30",
    "LT": "15:30",
    "MMM": "Ean",
    "MMMM": "Eanáir",
    "MMMM Do, YYYY": "Eanáir 5mh, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Dé Luain",
    "z": "CET",
  },
  "hr": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. siječnja 2026",
    "LLL": "5. siječnja 2026 15:30",
    "LT": "15:30",
    "MMM": "sij.",
    "MMMM": "siječanj",
    "MMMM Do, YYYY": "siječanj 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "ponedjeljak",
    "z": "CET",
  },
  "hu": {
    "HH:mm:ss": "15:30:00",
    "L": "2026.01.05.",
    "LL": "2026. január 5.",
    "LLL": "2026. január 5. 15:30",
    "LT": "15:30",
    "MMM": "jan.",
    "MMMM": "január",
    "MMMM Do, YYYY": "január 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "hétfő",
    "z": "CET",
  },
  "it": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 gennaio 2026",
    "LLL": "5 gennaio 2026 15:30",
    "LT": "15:30",
    "MMM": "gen",
    "MMMM": "gennaio",
    "MMMM Do, YYYY": "gennaio 5º, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "lunedì",
    "z": "CET",
  },
  "lb": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. Januar 2026",
    "LLL": "5. Januar 2026 15:30 Auer",
    "LT": "15:30 Auer",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Méindeg",
    "z": "CET",
  },
  "lt": {
    "HH:mm:ss": "15:30:00",
    "L": "2026-01-05",
    "LL": "2026 m. sausio 5 d.",
    "LLL": "2026 m. sausio 5 d., 15:30 val.",
    "LT": "15:30",
    "MMM": "sau",
    "MMMM": "sausis",
    "MMMM Do, YYYY": "sausio 5-oji, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "pirmadienis",
    "z": "CET",
  },
  "lv": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026.",
    "LL": "2026. gada 5. janvāris",
    "LLL": "2026. gada 5. janvāris, 15:30",
    "LT": "15:30",
    "MMM": "jan",
    "MMMM": "janvāris",
    "MMMM Do, YYYY": "janvāris 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "pirmdiena",
    "z": "CET",
  },
  "mi": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 Kohi-tāte 2026",
    "LLL": "5 Kohi-tāte 2026 i 15:30",
    "LT": "15:30",
    "MMM": "Kohi",
    "MMMM": "Kohi-tāte",
    "MMMM Do, YYYY": "Kohi-tāte 5º, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Mane",
    "z": "CET",
  },
  "nb": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. januar 2026",
    "LLL": "5. januar 2026 kl. 15:30",
    "LT": "15:30",
    "MMM": "jan.",
    "MMMM": "januar",
    "MMMM Do, YYYY": "januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "mandag",
    "z": "CET",
  },
  "nl": {
    "HH:mm:ss": "15:30:00",
    "L": "05-01-2026",
    "LL": "5 januari 2026",
    "LLL": "5 januari 2026 15:30",
    "LT": "15:30",
    "MMM": "jan.",
    "MMMM": "januari",
    "MMMM Do, YYYY": "januari 5de, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "maandag",
    "z": "CET",
  },
  "nl-be": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 januari 2026",
    "LLL": "5 januari 2026 15:30",
    "LT": "15:30",
    "MMM": "jan.",
    "MMMM": "januari",
    "MMMM Do, YYYY": "januari 5de, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "maandag",
    "z": "CET",
  },
  "pa-in": {
    "HH:mm:ss": "੧੫:੩੦:੦੦",
    "L": "੦੫/੦੧/੨੦੨੬",
    "LL": "੫ ਜਨਵਰੀ ੨੦੨੬",
    "LLL": "੫ ਜਨਵਰੀ ੨੦੨੬, ਦੁਪਹਿਰ ੩:੩੦ ਵਜੇ",
    "LT": "ਦੁਪਹਿਰ ੩:੩੦ ਵਜੇ",
    "MMM": "ਜਨਵਰੀ",
    "MMMM": "ਜਨਵਰੀ",
    "MMMM Do, YYYY": "ਜਨਵਰੀ ੫, ੨੦੨੬",
    "YYYY-MM-DD": "੨੦੨੬-੦੧-੦੫",
    "Z": "+੦੧:੦੦",
    "dddd": "ਸੋਮਵਾਰ",
    "z": "CET",
  },
  "pl": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5 stycznia 2026",
    "LLL": "5 stycznia 2026 15:30",
    "LT": "15:30",
    "MMM": "sty",
    "MMMM": "styczeń",
    "MMMM Do, YYYY": "styczeń 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "poniedziałek",
    "z": "CET",
  },
  "pt-br": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 de janeiro de 2026",
    "LLL": "5 de janeiro de 2026 às 15:30",
    "LT": "15:30",
    "MMM": "jan",
    "MMMM": "janeiro",
    "MMMM Do, YYYY": "janeiro 5º, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "segunda-feira",
    "z": "CET",
  },
  "ro": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5 ianuarie 2026",
    "LLL": "5 ianuarie 2026 15:30",
    "LT": "15:30",
    "MMM": "ian.",
    "MMMM": "ianuarie",
    "MMMM Do, YYYY": "ianuarie 5, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "luni",
    "z": "CET",
  },
  "sr": {
    "HH:mm:ss": "15:30:00",
    "L": "5. 1. 2026.",
    "LL": "5. januar 2026.",
    "LLL": "5. januar 2026. 15:30",
    "LT": "15:30",
    "MMM": "jan.",
    "MMMM": "januar",
    "MMMM Do, YYYY": "januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "ponedeljak",
    "z": "CET",
  },
  "sv": {
    "HH:mm:ss": "15:30:00",
    "L": "2026-01-05",
    "LL": "5 januari 2026",
    "LLL": "5 januari 2026 kl. 15:30",
    "LT": "15:30",
    "MMM": "jan",
    "MMMM": "januari",
    "MMMM Do, YYYY": "januari 5:e, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "måndag",
    "z": "CET",
  },
  "tr": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5 Ocak 2026",
    "LLL": "5 Ocak 2026 15:30",
    "LT": "15:30",
    "MMM": "Oca",
    "MMMM": "Ocak",
    "MMMM Do, YYYY": "Ocak 5, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Pazartesi",
    "z": "CET",
  },
  "ur": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 جنوری 2026",
    "LLL": "5 جنوری 2026 15:30",
    "LT": "15:30",
    "MMM": "جنوری",
    "MMMM": "جنوری",
    "MMMM Do, YYYY": "جنوری 5، 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "پیر",
    "z": "CET",
  },
}
`;

exports[`moment formatting baseline Grid A — every locale × every format formats an ordinary date in every locale 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 مارس 2026",
    "LLL": "22 مارس 2026 15:30",
    "LT": "15:30",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس 22, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "الأحد",
    "z": "CET",
  },
  "ar-sa": {
    "HH:mm:ss": "١٥:٣٠:٠٠",
    "L": "٢٢/٠٣/٢٠٢٦",
    "LL": "٢٢ مارس ٢٠٢٦",
    "LLL": "٢٢ مارس ٢٠٢٦ ١٥:٣٠",
    "LT": "١٥:٣٠",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس ٢٢، ٢٠٢٦",
    "YYYY-MM-DD": "٢٠٢٦-٠٣-٢٢",
    "Z": "+٠١:٠٠",
    "dddd": "الأحد",
    "z": "CET",
  },
  "ca": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 de març de 2026",
    "LLL": "22 de març de 2026 a les 15:30",
    "LT": "15:30",
    "MMM": "març",
    "MMMM": "març",
    "MMMM Do, YYYY": "març 22è, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "diumenge",
    "z": "CET",
  },
  "cy": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 Mawrth 2026",
    "LLL": "22 Mawrth 2026 15:30",
    "LT": "15:30",
    "MMM": "Maw",
    "MMMM": "Mawrth",
    "MMMM Do, YYYY": "Mawrth 22ain, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Dydd Sul",
    "z": "CET",
  },
  "da": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. marts 2026",
    "LLL": "22. marts 2026 15:30",
    "LT": "15:30",
    "MMM": "mar",
    "MMMM": "marts",
    "MMMM Do, YYYY": "marts 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "søndag",
    "z": "CET",
  },
  "de": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. März 2026",
    "LLL": "22. März 2026 15:30",
    "LT": "15:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sonntag",
    "z": "CET",
  },
  "de-at": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. März 2026",
    "LLL": "22. März 2026 15:30",
    "LT": "15:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sonntag",
    "z": "CET",
  },
  "el": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 Μαρτίου 2026",
    "LLL": "22 Μαρτίου 2026 3:30 ΜΜ",
    "LT": "3:30 ΜΜ",
    "MMM": "Μαρ",
    "MMMM": "Μάρτιος",
    "MMMM Do, YYYY": "Μάρτιος 22η, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Κυριακή",
    "z": "CET",
  },
  "en": {
    "HH:mm:ss": "15:30:00",
    "L": "03/22/2026",
    "LL": "March 22, 2026",
    "LLL": "March 22, 2026 3:30 PM",
    "LT": "3:30 PM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sunday",
    "z": "CET",
  },
  "en-ca": {
    "HH:mm:ss": "15:30:00",
    "L": "2026-03-22",
    "LL": "March 22, 2026",
    "LLL": "March 22, 2026 3:30 PM",
    "LT": "3:30 PM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sunday",
    "z": "CET",
  },
  "en-gb": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 March 2026",
    "LLL": "22 March 2026 15:30",
    "LT": "15:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sunday",
    "z": "CET",
  },
  "en-ie": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 March 2026",
    "LLL": "22 March 2026 15:30",
    "LT": "15:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sunday",
    "z": "CET",
  },
  "es": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 de marzo de 2026",
    "LLL": "22 de marzo de 2026 15:30",
    "LT": "15:30",
    "MMM": "mar.",
    "MMMM": "marzo",
    "MMMM Do, YYYY": "marzo 22º, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "domingo",
    "z": "CET",
  },
  "fi": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. maaliskuuta 2026",
    "LLL": "22. maaliskuuta 2026, klo 15.30",
    "LT": "15.30",
    "MMM": "maalis",
    "MMMM": "maaliskuu",
    "MMMM Do, YYYY": "maaliskuu 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "sunnuntai",
    "z": "CET",
  },
  "fr": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 mars 2026",
    "LLL": "22 mars 2026 15:30",
    "LT": "15:30",
    "MMM": "mars",
    "MMMM": "mars",
    "MMMM Do, YYYY": "mars 22, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "dimanche",
    "z": "CET",
  },
  "ga": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 Márta 2026",
    "LLL": "22 Márta 2026 15:30",
    "LT": "15:30",
    "MMM": "Márt",
    "MMMM": "Márta",
    "MMMM Do, YYYY": "Márta 22na, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Dé Domhnaigh",
    "z": "CET",
  },
  "hr": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. ožujka 2026",
    "LLL": "22. ožujka 2026 15:30",
    "LT": "15:30",
    "MMM": "ožu.",
    "MMMM": "ožujak",
    "MMMM Do, YYYY": "ožujak 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "nedjelja",
    "z": "CET",
  },
  "hu": {
    "HH:mm:ss": "15:30:00",
    "L": "2026.03.22.",
    "LL": "2026. március 22.",
    "LLL": "2026. március 22. 15:30",
    "LT": "15:30",
    "MMM": "márc.",
    "MMMM": "március",
    "MMMM Do, YYYY": "március 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "vasárnap",
    "z": "CET",
  },
  "it": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 marzo 2026",
    "LLL": "22 marzo 2026 15:30",
    "LT": "15:30",
    "MMM": "mar",
    "MMMM": "marzo",
    "MMMM Do, YYYY": "marzo 22º, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "domenica",
    "z": "CET",
  },
  "lb": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. Mäerz 2026",
    "LLL": "22. Mäerz 2026 15:30 Auer",
    "LT": "15:30 Auer",
    "MMM": "Mrz.",
    "MMMM": "Mäerz",
    "MMMM Do, YYYY": "Mäerz 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sonndeg",
    "z": "CET",
  },
  "lt": {
    "HH:mm:ss": "15:30:00",
    "L": "2026-03-22",
    "LL": "2026 m. kovo 22 d.",
    "LLL": "2026 m. kovo 22 d., 15:30 val.",
    "LT": "15:30",
    "MMM": "kov",
    "MMMM": "kovas",
    "MMMM Do, YYYY": "kovo 22-oji, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "sekmadienis",
    "z": "CET",
  },
  "lv": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026.",
    "LL": "2026. gada 22. marts",
    "LLL": "2026. gada 22. marts, 15:30",
    "LT": "15:30",
    "MMM": "mar",
    "MMMM": "marts",
    "MMMM Do, YYYY": "marts 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "svētdiena",
    "z": "CET",
  },
  "mi": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 Poutū-te-rangi 2026",
    "LLL": "22 Poutū-te-rangi 2026 i 15:30",
    "LT": "15:30",
    "MMM": "Pou",
    "MMMM": "Poutū-te-rangi",
    "MMMM Do, YYYY": "Poutū-te-rangi 22º, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Rātapu",
    "z": "CET",
  },
  "nb": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. mars 2026",
    "LLL": "22. mars 2026 kl. 15:30",
    "LT": "15:30",
    "MMM": "mars",
    "MMMM": "mars",
    "MMMM Do, YYYY": "mars 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "søndag",
    "z": "CET",
  },
  "nl": {
    "HH:mm:ss": "15:30:00",
    "L": "22-03-2026",
    "LL": "22 maart 2026",
    "LLL": "22 maart 2026 15:30",
    "LT": "15:30",
    "MMM": "mrt.",
    "MMMM": "maart",
    "MMMM Do, YYYY": "maart 22ste, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "zondag",
    "z": "CET",
  },
  "nl-be": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 maart 2026",
    "LLL": "22 maart 2026 15:30",
    "LT": "15:30",
    "MMM": "mrt.",
    "MMMM": "maart",
    "MMMM Do, YYYY": "maart 22ste, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "zondag",
    "z": "CET",
  },
  "pa-in": {
    "HH:mm:ss": "੧੫:੩੦:੦੦",
    "L": "੨੨/੦੩/੨੦੨੬",
    "LL": "੨੨ ਮਾਰਚ ੨੦੨੬",
    "LLL": "੨੨ ਮਾਰਚ ੨੦੨੬, ਦੁਪਹਿਰ ੩:੩੦ ਵਜੇ",
    "LT": "ਦੁਪਹਿਰ ੩:੩੦ ਵਜੇ",
    "MMM": "ਮਾਰਚ",
    "MMMM": "ਮਾਰਚ",
    "MMMM Do, YYYY": "ਮਾਰਚ ੨੨, ੨੦੨੬",
    "YYYY-MM-DD": "੨੦੨੬-੦੩-੨੨",
    "Z": "+੦੧:੦੦",
    "dddd": "ਐਤਵਾਰ",
    "z": "CET",
  },
  "pl": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22 marca 2026",
    "LLL": "22 marca 2026 15:30",
    "LT": "15:30",
    "MMM": "mar",
    "MMMM": "marzec",
    "MMMM Do, YYYY": "marzec 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "niedziela",
    "z": "CET",
  },
  "pt-br": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 de março de 2026",
    "LLL": "22 de março de 2026 às 15:30",
    "LT": "15:30",
    "MMM": "mar",
    "MMMM": "março",
    "MMMM Do, YYYY": "março 22º, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "domingo",
    "z": "CET",
  },
  "ro": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22 martie 2026",
    "LLL": "22 martie 2026 15:30",
    "LT": "15:30",
    "MMM": "mart.",
    "MMMM": "martie",
    "MMMM Do, YYYY": "martie 22, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "duminică",
    "z": "CET",
  },
  "sr": {
    "HH:mm:ss": "15:30:00",
    "L": "22. 3. 2026.",
    "LL": "22. mart 2026.",
    "LLL": "22. mart 2026. 15:30",
    "LT": "15:30",
    "MMM": "mar.",
    "MMMM": "mart",
    "MMMM Do, YYYY": "mart 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "nedelja",
    "z": "CET",
  },
  "sv": {
    "HH:mm:ss": "15:30:00",
    "L": "2026-03-22",
    "LL": "22 mars 2026",
    "LLL": "22 mars 2026 kl. 15:30",
    "LT": "15:30",
    "MMM": "mar",
    "MMMM": "mars",
    "MMMM Do, YYYY": "mars 22:a, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "söndag",
    "z": "CET",
  },
  "tr": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22 Mart 2026",
    "LLL": "22 Mart 2026 15:30",
    "LT": "15:30",
    "MMM": "Mar",
    "MMMM": "Mart",
    "MMMM Do, YYYY": "Mart 22, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Pazar",
    "z": "CET",
  },
  "ur": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 مارچ 2026",
    "LLL": "22 مارچ 2026 15:30",
    "LT": "15:30",
    "MMM": "مارچ",
    "MMMM": "مارچ",
    "MMMM Do, YYYY": "مارچ 22، 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "اتوار",
    "z": "CET",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats chileDst (2026-09-06T05:00:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "02:00:00",
    "L": "06/09/2026",
    "LL": "6 شتنبر 2026",
    "LLL": "6 شتنبر 2026 02:00",
    "LT": "02:00",
    "MMM": "شتنبر",
    "MMMM": "شتنبر",
    "MMMM Do, YYYY": "شتنبر 6, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "-03:00",
    "dddd": "الأحد",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "02:00:00",
    "L": "06.09.2026",
    "LL": "6. September 2026",
    "LLL": "6. September 2026 02:00",
    "LT": "02:00",
    "MMM": "Sep.",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6., 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "-03:00",
    "dddd": "Sonntag",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "02:00:00",
    "L": "09/06/2026",
    "LL": "September 6, 2026",
    "LLL": "September 6, 2026 2:00 AM",
    "LT": "2:00 AM",
    "MMM": "Sep",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6th, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "-03:00",
    "dddd": "Sunday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "02:00:00",
    "L": "06/09/2026",
    "LL": "6 September 2026",
    "LLL": "6 September 2026 02:00",
    "LT": "02:00",
    "MMM": "Sep",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6th, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "-03:00",
    "dddd": "Sunday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats euDstFallBack (2026-10-25T00:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "21:30:00",
    "L": "24/10/2026",
    "LL": "24 أكتوبر 2026",
    "LLL": "24 أكتوبر 2026 21:30",
    "LT": "21:30",
    "MMM": "أكتوبر",
    "MMMM": "أكتوبر",
    "MMMM Do, YYYY": "أكتوبر 24, 2026",
    "YYYY-MM-DD": "2026-10-24",
    "Z": "-03:00",
    "dddd": "السبت",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "21:30:00",
    "L": "24.10.2026",
    "LL": "24. Oktober 2026",
    "LLL": "24. Oktober 2026 21:30",
    "LT": "21:30",
    "MMM": "Okt.",
    "MMMM": "Oktober",
    "MMMM Do, YYYY": "Oktober 24., 2026",
    "YYYY-MM-DD": "2026-10-24",
    "Z": "-03:00",
    "dddd": "Samstag",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "21:30:00",
    "L": "10/24/2026",
    "LL": "October 24, 2026",
    "LLL": "October 24, 2026 9:30 PM",
    "LT": "9:30 PM",
    "MMM": "Oct",
    "MMMM": "October",
    "MMMM Do, YYYY": "October 24th, 2026",
    "YYYY-MM-DD": "2026-10-24",
    "Z": "-03:00",
    "dddd": "Saturday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "21:30:00",
    "L": "24/10/2026",
    "LL": "24 October 2026",
    "LLL": "24 October 2026 21:30",
    "LT": "21:30",
    "MMM": "Oct",
    "MMMM": "October",
    "MMMM Do, YYYY": "October 24th, 2026",
    "YYYY-MM-DD": "2026-10-24",
    "Z": "-03:00",
    "dddd": "Saturday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats euDstSpringForward (2026-03-29T01:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "22:30:00",
    "L": "28/03/2026",
    "LL": "28 مارس 2026",
    "LLL": "28 مارس 2026 22:30",
    "LT": "22:30",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس 28, 2026",
    "YYYY-MM-DD": "2026-03-28",
    "Z": "-03:00",
    "dddd": "السبت",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "22:30:00",
    "L": "28.03.2026",
    "LL": "28. März 2026",
    "LLL": "28. März 2026 22:30",
    "LT": "22:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 28., 2026",
    "YYYY-MM-DD": "2026-03-28",
    "Z": "-03:00",
    "dddd": "Samstag",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "22:30:00",
    "L": "03/28/2026",
    "LL": "March 28, 2026",
    "LLL": "March 28, 2026 10:30 PM",
    "LT": "10:30 PM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 28th, 2026",
    "YYYY-MM-DD": "2026-03-28",
    "Z": "-03:00",
    "dddd": "Saturday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "22:30:00",
    "L": "28/03/2026",
    "LL": "28 March 2026",
    "LLL": "28 March 2026 22:30",
    "LT": "22:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 28th, 2026",
    "YYYY-MM-DD": "2026-03-28",
    "Z": "-03:00",
    "dddd": "Saturday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats isoWeekYearTrap (2025-12-29T12:00:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "09:00:00",
    "L": "29/12/2025",
    "LL": "29 دجنبر 2025",
    "LLL": "29 دجنبر 2025 09:00",
    "LT": "09:00",
    "MMM": "دجنبر",
    "MMMM": "دجنبر",
    "MMMM Do, YYYY": "دجنبر 29, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "-03:00",
    "dddd": "الإثنين",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "09:00:00",
    "L": "29.12.2025",
    "LL": "29. Dezember 2025",
    "LLL": "29. Dezember 2025 09:00",
    "LT": "09:00",
    "MMM": "Dez.",
    "MMMM": "Dezember",
    "MMMM Do, YYYY": "Dezember 29., 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "-03:00",
    "dddd": "Montag",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "09:00:00",
    "L": "12/29/2025",
    "LL": "December 29, 2025",
    "LLL": "December 29, 2025 9:00 AM",
    "LT": "9:00 AM",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 29th, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "-03:00",
    "dddd": "Monday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "09:00:00",
    "L": "29/12/2025",
    "LL": "29 December 2025",
    "LLL": "29 December 2025 09:00",
    "LT": "09:00",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 29th, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "-03:00",
    "dddd": "Monday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats january (2026-01-05T14:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "11:30:00",
    "L": "05/01/2026",
    "LL": "5 يناير 2026",
    "LLL": "5 يناير 2026 11:30",
    "LT": "11:30",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير 5, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "-03:00",
    "dddd": "الإثنين",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "11:30:00",
    "L": "05.01.2026",
    "LL": "5. Januar 2026",
    "LLL": "5. Januar 2026 11:30",
    "LT": "11:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "-03:00",
    "dddd": "Montag",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "11:30:00",
    "L": "01/05/2026",
    "LL": "January 5, 2026",
    "LLL": "January 5, 2026 11:30 AM",
    "LT": "11:30 AM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "-03:00",
    "dddd": "Monday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "11:30:00",
    "L": "05/01/2026",
    "LL": "5 January 2026",
    "LLL": "5 January 2026 11:30",
    "LT": "11:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "-03:00",
    "dddd": "Monday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats ordinary (2026-03-22T14:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "11:30:00",
    "L": "22/03/2026",
    "LL": "22 مارس 2026",
    "LLL": "22 مارس 2026 11:30",
    "LT": "11:30",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس 22, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "-03:00",
    "dddd": "الأحد",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "11:30:00",
    "L": "22.03.2026",
    "LL": "22. März 2026",
    "LLL": "22. März 2026 11:30",
    "LT": "11:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "-03:00",
    "dddd": "Sonntag",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "11:30:00",
    "L": "03/22/2026",
    "LL": "March 22, 2026",
    "LLL": "March 22, 2026 11:30 AM",
    "LT": "11:30 AM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "-03:00",
    "dddd": "Sunday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "11:30:00",
    "L": "22/03/2026",
    "LL": "22 March 2026",
    "LLL": "22 March 2026 11:30",
    "LT": "11:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "-03:00",
    "dddd": "Sunday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats yearBoundaryDec31 (2025-12-31T23:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "20:30:00",
    "L": "31/12/2025",
    "LL": "31 دجنبر 2025",
    "LLL": "31 دجنبر 2025 20:30",
    "LT": "20:30",
    "MMM": "دجنبر",
    "MMMM": "دجنبر",
    "MMMM Do, YYYY": "دجنبر 31, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "الأربعاء",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "20:30:00",
    "L": "31.12.2025",
    "LL": "31. Dezember 2025",
    "LLL": "31. Dezember 2025 20:30",
    "LT": "20:30",
    "MMM": "Dez.",
    "MMMM": "Dezember",
    "MMMM Do, YYYY": "Dezember 31., 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "Mittwoch",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "20:30:00",
    "L": "12/31/2025",
    "LL": "December 31, 2025",
    "LLL": "December 31, 2025 8:30 PM",
    "LT": "8:30 PM",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 31st, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "Wednesday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "20:30:00",
    "L": "31/12/2025",
    "LL": "31 December 2025",
    "LLL": "31 December 2025 20:30",
    "LT": "20:30",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 31st, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "Wednesday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date America/Santiago formats yearBoundaryJan01 (2026-01-01T00:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "21:30:00",
    "L": "31/12/2025",
    "LL": "31 دجنبر 2025",
    "LLL": "31 دجنبر 2025 21:30",
    "LT": "21:30",
    "MMM": "دجنبر",
    "MMMM": "دجنبر",
    "MMMM Do, YYYY": "دجنبر 31, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "الأربعاء",
    "z": "-03",
  },
  "de-at": {
    "HH:mm:ss": "21:30:00",
    "L": "31.12.2025",
    "LL": "31. Dezember 2025",
    "LLL": "31. Dezember 2025 21:30",
    "LT": "21:30",
    "MMM": "Dez.",
    "MMMM": "Dezember",
    "MMMM Do, YYYY": "Dezember 31., 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "Mittwoch",
    "z": "-03",
  },
  "en": {
    "HH:mm:ss": "21:30:00",
    "L": "12/31/2025",
    "LL": "December 31, 2025",
    "LLL": "December 31, 2025 9:30 PM",
    "LT": "9:30 PM",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 31st, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "Wednesday",
    "z": "-03",
  },
  "en-gb": {
    "HH:mm:ss": "21:30:00",
    "L": "31/12/2025",
    "LL": "31 December 2025",
    "LLL": "31 December 2025 21:30",
    "LT": "21:30",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 31st, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "-03:00",
    "dddd": "Wednesday",
    "z": "-03",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats chileDst (2026-09-06T05:00:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "07:00:00",
    "L": "06/09/2026",
    "LL": "6 شتنبر 2026",
    "LLL": "6 شتنبر 2026 07:00",
    "LT": "07:00",
    "MMM": "شتنبر",
    "MMMM": "شتنبر",
    "MMMM Do, YYYY": "شتنبر 6, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+02:00",
    "dddd": "الأحد",
    "z": "CEST",
  },
  "de-at": {
    "HH:mm:ss": "07:00:00",
    "L": "06.09.2026",
    "LL": "6. September 2026",
    "LLL": "6. September 2026 07:00",
    "LT": "07:00",
    "MMM": "Sep.",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6., 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+02:00",
    "dddd": "Sonntag",
    "z": "CEST",
  },
  "en": {
    "HH:mm:ss": "07:00:00",
    "L": "09/06/2026",
    "LL": "September 6, 2026",
    "LLL": "September 6, 2026 7:00 AM",
    "LT": "7:00 AM",
    "MMM": "Sep",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6th, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+02:00",
    "dddd": "Sunday",
    "z": "CEST",
  },
  "en-gb": {
    "HH:mm:ss": "07:00:00",
    "L": "06/09/2026",
    "LL": "6 September 2026",
    "LLL": "6 September 2026 07:00",
    "LT": "07:00",
    "MMM": "Sep",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6th, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+02:00",
    "dddd": "Sunday",
    "z": "CEST",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats euDstFallBack (2026-10-25T00:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "02:30:00",
    "L": "25/10/2026",
    "LL": "25 أكتوبر 2026",
    "LLL": "25 أكتوبر 2026 02:30",
    "LT": "02:30",
    "MMM": "أكتوبر",
    "MMMM": "أكتوبر",
    "MMMM Do, YYYY": "أكتوبر 25, 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+02:00",
    "dddd": "الأحد",
    "z": "CEST",
  },
  "de-at": {
    "HH:mm:ss": "02:30:00",
    "L": "25.10.2026",
    "LL": "25. Oktober 2026",
    "LLL": "25. Oktober 2026 02:30",
    "LT": "02:30",
    "MMM": "Okt.",
    "MMMM": "Oktober",
    "MMMM Do, YYYY": "Oktober 25., 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+02:00",
    "dddd": "Sonntag",
    "z": "CEST",
  },
  "en": {
    "HH:mm:ss": "02:30:00",
    "L": "10/25/2026",
    "LL": "October 25, 2026",
    "LLL": "October 25, 2026 2:30 AM",
    "LT": "2:30 AM",
    "MMM": "Oct",
    "MMMM": "October",
    "MMMM Do, YYYY": "October 25th, 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+02:00",
    "dddd": "Sunday",
    "z": "CEST",
  },
  "en-gb": {
    "HH:mm:ss": "02:30:00",
    "L": "25/10/2026",
    "LL": "25 October 2026",
    "LLL": "25 October 2026 02:30",
    "LT": "02:30",
    "MMM": "Oct",
    "MMMM": "October",
    "MMMM Do, YYYY": "October 25th, 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+02:00",
    "dddd": "Sunday",
    "z": "CEST",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats euDstSpringForward (2026-03-29T01:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "03:30:00",
    "L": "29/03/2026",
    "LL": "29 مارس 2026",
    "LLL": "29 مارس 2026 03:30",
    "LT": "03:30",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس 29, 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+02:00",
    "dddd": "الأحد",
    "z": "CEST",
  },
  "de-at": {
    "HH:mm:ss": "03:30:00",
    "L": "29.03.2026",
    "LL": "29. März 2026",
    "LLL": "29. März 2026 03:30",
    "LT": "03:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 29., 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+02:00",
    "dddd": "Sonntag",
    "z": "CEST",
  },
  "en": {
    "HH:mm:ss": "03:30:00",
    "L": "03/29/2026",
    "LL": "March 29, 2026",
    "LLL": "March 29, 2026 3:30 AM",
    "LT": "3:30 AM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 29th, 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+02:00",
    "dddd": "Sunday",
    "z": "CEST",
  },
  "en-gb": {
    "HH:mm:ss": "03:30:00",
    "L": "29/03/2026",
    "LL": "29 March 2026",
    "LLL": "29 March 2026 03:30",
    "LT": "03:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 29th, 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+02:00",
    "dddd": "Sunday",
    "z": "CEST",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats isoWeekYearTrap (2025-12-29T12:00:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "13:00:00",
    "L": "29/12/2025",
    "LL": "29 دجنبر 2025",
    "LLL": "29 دجنبر 2025 13:00",
    "LT": "13:00",
    "MMM": "دجنبر",
    "MMMM": "دجنبر",
    "MMMM Do, YYYY": "دجنبر 29, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+01:00",
    "dddd": "الإثنين",
    "z": "CET",
  },
  "de-at": {
    "HH:mm:ss": "13:00:00",
    "L": "29.12.2025",
    "LL": "29. Dezember 2025",
    "LLL": "29. Dezember 2025 13:00",
    "LT": "13:00",
    "MMM": "Dez.",
    "MMMM": "Dezember",
    "MMMM Do, YYYY": "Dezember 29., 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+01:00",
    "dddd": "Montag",
    "z": "CET",
  },
  "en": {
    "HH:mm:ss": "13:00:00",
    "L": "12/29/2025",
    "LL": "December 29, 2025",
    "LLL": "December 29, 2025 1:00 PM",
    "LT": "1:00 PM",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 29th, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
  "en-gb": {
    "HH:mm:ss": "13:00:00",
    "L": "29/12/2025",
    "LL": "29 December 2025",
    "LLL": "29 December 2025 13:00",
    "LT": "13:00",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 29th, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats january (2026-01-05T14:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 يناير 2026",
    "LLL": "5 يناير 2026 15:30",
    "LT": "15:30",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير 5, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "الإثنين",
    "z": "CET",
  },
  "de-at": {
    "HH:mm:ss": "15:30:00",
    "L": "05.01.2026",
    "LL": "5. Januar 2026",
    "LLL": "5. Januar 2026 15:30",
    "LT": "15:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Montag",
    "z": "CET",
  },
  "en": {
    "HH:mm:ss": "15:30:00",
    "L": "01/05/2026",
    "LL": "January 5, 2026",
    "LLL": "January 5, 2026 3:30 PM",
    "LT": "3:30 PM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
  "en-gb": {
    "HH:mm:ss": "15:30:00",
    "L": "05/01/2026",
    "LL": "5 January 2026",
    "LLL": "5 January 2026 15:30",
    "LT": "15:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+01:00",
    "dddd": "Monday",
    "z": "CET",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats ordinary (2026-03-22T14:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 مارس 2026",
    "LLL": "22 مارس 2026 15:30",
    "LT": "15:30",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس 22, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "الأحد",
    "z": "CET",
  },
  "de-at": {
    "HH:mm:ss": "15:30:00",
    "L": "22.03.2026",
    "LL": "22. März 2026",
    "LLL": "22. März 2026 15:30",
    "LT": "15:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sonntag",
    "z": "CET",
  },
  "en": {
    "HH:mm:ss": "15:30:00",
    "L": "03/22/2026",
    "LL": "March 22, 2026",
    "LLL": "March 22, 2026 3:30 PM",
    "LT": "3:30 PM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sunday",
    "z": "CET",
  },
  "en-gb": {
    "HH:mm:ss": "15:30:00",
    "L": "22/03/2026",
    "LL": "22 March 2026",
    "LLL": "22 March 2026 15:30",
    "LT": "15:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+01:00",
    "dddd": "Sunday",
    "z": "CET",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats yearBoundaryDec31 (2025-12-31T23:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "00:30:00",
    "L": "01/01/2026",
    "LL": "1 يناير 2026",
    "LLL": "1 يناير 2026 00:30",
    "LT": "00:30",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير 1, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "الخميس",
    "z": "CET",
  },
  "de-at": {
    "HH:mm:ss": "00:30:00",
    "L": "01.01.2026",
    "LL": "1. Januar 2026",
    "LLL": "1. Januar 2026 00:30",
    "LT": "00:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 1., 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "Donnerstag",
    "z": "CET",
  },
  "en": {
    "HH:mm:ss": "00:30:00",
    "L": "01/01/2026",
    "LL": "January 1, 2026",
    "LLL": "January 1, 2026 12:30 AM",
    "LT": "12:30 AM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 1st, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "Thursday",
    "z": "CET",
  },
  "en-gb": {
    "HH:mm:ss": "00:30:00",
    "L": "01/01/2026",
    "LL": "1 January 2026",
    "LLL": "1 January 2026 00:30",
    "LT": "00:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 1st, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "Thursday",
    "z": "CET",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date Europe/Brussels formats yearBoundaryJan01 (2026-01-01T00:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "01:30:00",
    "L": "01/01/2026",
    "LL": "1 يناير 2026",
    "LLL": "1 يناير 2026 01:30",
    "LT": "01:30",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير 1, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "الخميس",
    "z": "CET",
  },
  "de-at": {
    "HH:mm:ss": "01:30:00",
    "L": "01.01.2026",
    "LL": "1. Januar 2026",
    "LLL": "1. Januar 2026 01:30",
    "LT": "01:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 1., 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "Donnerstag",
    "z": "CET",
  },
  "en": {
    "HH:mm:ss": "01:30:00",
    "L": "01/01/2026",
    "LL": "January 1, 2026",
    "LLL": "January 1, 2026 1:30 AM",
    "LT": "1:30 AM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 1st, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "Thursday",
    "z": "CET",
  },
  "en-gb": {
    "HH:mm:ss": "01:30:00",
    "L": "01/01/2026",
    "LL": "1 January 2026",
    "LLL": "1 January 2026 01:30",
    "LT": "01:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 1st, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+01:00",
    "dddd": "Thursday",
    "z": "CET",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats chileDst (2026-09-06T05:00:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "05:00:00",
    "L": "06/09/2026",
    "LL": "6 شتنبر 2026",
    "LLL": "6 شتنبر 2026 05:00",
    "LT": "05:00",
    "MMM": "شتنبر",
    "MMMM": "شتنبر",
    "MMMM Do, YYYY": "شتنبر 6, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+00:00",
    "dddd": "الأحد",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "05:00:00",
    "L": "06.09.2026",
    "LL": "6. September 2026",
    "LLL": "6. September 2026 05:00",
    "LT": "05:00",
    "MMM": "Sep.",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6., 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+00:00",
    "dddd": "Sonntag",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "05:00:00",
    "L": "09/06/2026",
    "LL": "September 6, 2026",
    "LLL": "September 6, 2026 5:00 AM",
    "LT": "5:00 AM",
    "MMM": "Sep",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6th, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "05:00:00",
    "L": "06/09/2026",
    "LL": "6 September 2026",
    "LLL": "6 September 2026 05:00",
    "LT": "05:00",
    "MMM": "Sep",
    "MMMM": "September",
    "MMMM Do, YYYY": "September 6th, 2026",
    "YYYY-MM-DD": "2026-09-06",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats euDstFallBack (2026-10-25T00:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "00:30:00",
    "L": "25/10/2026",
    "LL": "25 أكتوبر 2026",
    "LLL": "25 أكتوبر 2026 00:30",
    "LT": "00:30",
    "MMM": "أكتوبر",
    "MMMM": "أكتوبر",
    "MMMM Do, YYYY": "أكتوبر 25, 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+00:00",
    "dddd": "الأحد",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "00:30:00",
    "L": "25.10.2026",
    "LL": "25. Oktober 2026",
    "LLL": "25. Oktober 2026 00:30",
    "LT": "00:30",
    "MMM": "Okt.",
    "MMMM": "Oktober",
    "MMMM Do, YYYY": "Oktober 25., 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+00:00",
    "dddd": "Sonntag",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "00:30:00",
    "L": "10/25/2026",
    "LL": "October 25, 2026",
    "LLL": "October 25, 2026 12:30 AM",
    "LT": "12:30 AM",
    "MMM": "Oct",
    "MMMM": "October",
    "MMMM Do, YYYY": "October 25th, 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "00:30:00",
    "L": "25/10/2026",
    "LL": "25 October 2026",
    "LLL": "25 October 2026 00:30",
    "LT": "00:30",
    "MMM": "Oct",
    "MMMM": "October",
    "MMMM Do, YYYY": "October 25th, 2026",
    "YYYY-MM-DD": "2026-10-25",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats euDstSpringForward (2026-03-29T01:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "01:30:00",
    "L": "29/03/2026",
    "LL": "29 مارس 2026",
    "LLL": "29 مارس 2026 01:30",
    "LT": "01:30",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس 29, 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+00:00",
    "dddd": "الأحد",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "01:30:00",
    "L": "29.03.2026",
    "LL": "29. März 2026",
    "LLL": "29. März 2026 01:30",
    "LT": "01:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 29., 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+00:00",
    "dddd": "Sonntag",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "01:30:00",
    "L": "03/29/2026",
    "LL": "March 29, 2026",
    "LLL": "March 29, 2026 1:30 AM",
    "LT": "1:30 AM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 29th, 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "01:30:00",
    "L": "29/03/2026",
    "LL": "29 March 2026",
    "LLL": "29 March 2026 01:30",
    "LT": "01:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 29th, 2026",
    "YYYY-MM-DD": "2026-03-29",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats isoWeekYearTrap (2025-12-29T12:00:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "12:00:00",
    "L": "29/12/2025",
    "LL": "29 دجنبر 2025",
    "LLL": "29 دجنبر 2025 12:00",
    "LT": "12:00",
    "MMM": "دجنبر",
    "MMMM": "دجنبر",
    "MMMM Do, YYYY": "دجنبر 29, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+00:00",
    "dddd": "الإثنين",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "12:00:00",
    "L": "29.12.2025",
    "LL": "29. Dezember 2025",
    "LLL": "29. Dezember 2025 12:00",
    "LT": "12:00",
    "MMM": "Dez.",
    "MMMM": "Dezember",
    "MMMM Do, YYYY": "Dezember 29., 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+00:00",
    "dddd": "Montag",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "12:00:00",
    "L": "12/29/2025",
    "LL": "December 29, 2025",
    "LLL": "December 29, 2025 12:00 PM",
    "LT": "12:00 PM",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 29th, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+00:00",
    "dddd": "Monday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "12:00:00",
    "L": "29/12/2025",
    "LL": "29 December 2025",
    "LLL": "29 December 2025 12:00",
    "LT": "12:00",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 29th, 2025",
    "YYYY-MM-DD": "2025-12-29",
    "Z": "+00:00",
    "dddd": "Monday",
    "z": "UTC",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats january (2026-01-05T14:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "14:30:00",
    "L": "05/01/2026",
    "LL": "5 يناير 2026",
    "LLL": "5 يناير 2026 14:30",
    "LT": "14:30",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير 5, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+00:00",
    "dddd": "الإثنين",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "14:30:00",
    "L": "05.01.2026",
    "LL": "5. Januar 2026",
    "LLL": "5. Januar 2026 14:30",
    "LT": "14:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 5., 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+00:00",
    "dddd": "Montag",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "14:30:00",
    "L": "01/05/2026",
    "LL": "January 5, 2026",
    "LLL": "January 5, 2026 2:30 PM",
    "LT": "2:30 PM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+00:00",
    "dddd": "Monday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "14:30:00",
    "L": "05/01/2026",
    "LL": "5 January 2026",
    "LLL": "5 January 2026 14:30",
    "LT": "14:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 5th, 2026",
    "YYYY-MM-DD": "2026-01-05",
    "Z": "+00:00",
    "dddd": "Monday",
    "z": "UTC",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats ordinary (2026-03-22T14:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "14:30:00",
    "L": "22/03/2026",
    "LL": "22 مارس 2026",
    "LLL": "22 مارس 2026 14:30",
    "LT": "14:30",
    "MMM": "مارس",
    "MMMM": "مارس",
    "MMMM Do, YYYY": "مارس 22, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+00:00",
    "dddd": "الأحد",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "14:30:00",
    "L": "22.03.2026",
    "LL": "22. März 2026",
    "LLL": "22. März 2026 14:30",
    "LT": "14:30",
    "MMM": "März",
    "MMMM": "März",
    "MMMM Do, YYYY": "März 22., 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+00:00",
    "dddd": "Sonntag",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "14:30:00",
    "L": "03/22/2026",
    "LL": "March 22, 2026",
    "LLL": "March 22, 2026 2:30 PM",
    "LT": "2:30 PM",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "14:30:00",
    "L": "22/03/2026",
    "LL": "22 March 2026",
    "LLL": "22 March 2026 14:30",
    "LT": "14:30",
    "MMM": "Mar",
    "MMMM": "March",
    "MMMM Do, YYYY": "March 22nd, 2026",
    "YYYY-MM-DD": "2026-03-22",
    "Z": "+00:00",
    "dddd": "Sunday",
    "z": "UTC",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats yearBoundaryDec31 (2025-12-31T23:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "23:30:00",
    "L": "31/12/2025",
    "LL": "31 دجنبر 2025",
    "LLL": "31 دجنبر 2025 23:30",
    "LT": "23:30",
    "MMM": "دجنبر",
    "MMMM": "دجنبر",
    "MMMM Do, YYYY": "دجنبر 31, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "+00:00",
    "dddd": "الأربعاء",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "23:30:00",
    "L": "31.12.2025",
    "LL": "31. Dezember 2025",
    "LLL": "31. Dezember 2025 23:30",
    "LT": "23:30",
    "MMM": "Dez.",
    "MMMM": "Dezember",
    "MMMM Do, YYYY": "Dezember 31., 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "+00:00",
    "dddd": "Mittwoch",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "23:30:00",
    "L": "12/31/2025",
    "LL": "December 31, 2025",
    "LLL": "December 31, 2025 11:30 PM",
    "LT": "11:30 PM",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 31st, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "+00:00",
    "dddd": "Wednesday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "23:30:00",
    "L": "31/12/2025",
    "LL": "31 December 2025",
    "LLL": "31 December 2025 23:30",
    "LT": "23:30",
    "MMM": "Dec",
    "MMMM": "December",
    "MMMM Do, YYYY": "December 31st, 2025",
    "YYYY-MM-DD": "2025-12-31",
    "Z": "+00:00",
    "dddd": "Wednesday",
    "z": "UTC",
  },
}
`;

exports[`moment formatting baseline Grid B — every timezone × every edge date UTC formats yearBoundaryJan01 (2026-01-01T00:30:00Z) 1`] = `
{
  "ar-ma": {
    "HH:mm:ss": "00:30:00",
    "L": "01/01/2026",
    "LL": "1 يناير 2026",
    "LLL": "1 يناير 2026 00:30",
    "LT": "00:30",
    "MMM": "يناير",
    "MMMM": "يناير",
    "MMMM Do, YYYY": "يناير 1, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+00:00",
    "dddd": "الخميس",
    "z": "UTC",
  },
  "de-at": {
    "HH:mm:ss": "00:30:00",
    "L": "01.01.2026",
    "LL": "1. Januar 2026",
    "LLL": "1. Januar 2026 00:30",
    "LT": "00:30",
    "MMM": "Jan.",
    "MMMM": "Januar",
    "MMMM Do, YYYY": "Januar 1., 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+00:00",
    "dddd": "Donnerstag",
    "z": "UTC",
  },
  "en": {
    "HH:mm:ss": "00:30:00",
    "L": "01/01/2026",
    "LL": "January 1, 2026",
    "LLL": "January 1, 2026 12:30 AM",
    "LT": "12:30 AM",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 1st, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+00:00",
    "dddd": "Thursday",
    "z": "UTC",
  },
  "en-gb": {
    "HH:mm:ss": "00:30:00",
    "L": "01/01/2026",
    "LL": "1 January 2026",
    "LLL": "1 January 2026 00:30",
    "LT": "00:30",
    "MMM": "Jan",
    "MMMM": "January",
    "MMMM Do, YYYY": "January 1st, 2026",
    "YYYY-MM-DD": "2026-01-01",
    "Z": "+00:00",
    "dddd": "Thursday",
    "z": "UTC",
  },
}
`;
